# jayla-pa

./: .dockerignore  .env.example  .gitignore  DEPLOY_24_7.md  Dockerfile  ONBOARDING_PLAN.md  PERSONAL_ASSISTANT_PATTERNS.md  PERSONAL_ASSISTANT_PATTERNS_APPENDIX.md  README.md  Untitled  agent.py  configuration.py  constraints-railway.txt  graph.py  langgraph.json  memory.py  nixpacks.toml  nodes.py  pa_cli.py  prompts.py  pyproject.toml  rag.py  railway.toml  render.yaml  requirements-railway.txt  requirements.txt  speech_to_text.py  state.py  text_to_speech.py  tools.py  user_profile.py  vision.py
docs/: AVA_VS_JAYLA_IMAGE_OCR.md  STT_TTS_GROQ.md  SUPERVISOR_AGENT_GEMS.md  WHERE_DATA_IS_STORED.md
scripts/: curl_deployed.sh  ensure_cron_secret.sh  init_qdrant.py  inspect_qdrant.py  list_tools.py  push_image_fixes.sh  reset_data.py  run_sql_migrations.py  set_railway_vars.sh  set_railway_vision_var.sh  set_telegram_webhook.py  setup_checkpointer.py  test_env_connections.sh  test_stt.py  test_tool_calls.py  test_webhook_local.py
sql/: 0-drop-all.sql  0-extensions.sql  1-projects-tasks.sql  2-rag-documents.sql  3-user-profiles.sql  4-onboarding-fields.sql  5-reminders.sql
telegram_bot/: client.py  webhook.py
tests/: __init__.py  conftest.py  test_agent.py  test_brave_tools.py  test_graph.py  test_memory.py  test_rag.py  test_rag_db.py  test_speech_to_text.py  test_state.py  test_text_to_speech.py  test_vision.py
tools_custom/: __init__.py  brave_tools.py  gmail_attachment.py  image_gen_tools.py  project_tasks.py  rag_tools.py  reminders.py
