[project]
name = "jayla-pa"
version = "0.1.0"
description = "Jayla personal assistant (PA) — LangGraph + Arcade + Neon + Qdrant"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "langchain-core",
    "langchain-groq",
    "langchain-deepseek",
    "langchain-arcade",
    "langchain-community",
    "qdrant-client",
    "sentence-transformers",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "python-telegram-bot",
    "docling",
    "psycopg2-binary",
    "pypdf>=6.6.2",
    "pymupdf>=1.26.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:AgentStatePydantic has been moved:",
]
