[project]
name = "jayla-pa"
version = "0.1.0"
description = "Jayla personal assistant (PA) — LangGraph + Arcade + Neon + Qdrant"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "langgraph-checkpoint-postgres",
    "langchain-core",
    "langchain-groq",
    "groq",
    "langchain-deepseek",
    "langchain-arcade==1.3.1",
    "langchain-community",
    "langchain-text-splitters",
    "qdrant-client",
    "sentence-transformers",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "python-telegram-bot",
    "httpx",
    "docling",
    "psycopg2-binary",
    "PyPDF2",
    "docx2txt",
    # Text-to-Speech (free):
    "pyttsx3",
    "gtts",
    "pydub",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:AgentStatePydantic has been moved:",
]
